# bsl-gradual-types

./: .gitignore  1c_style_tree.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_SYSTEM_ROADMAP.md  LSP_README.md  PROGRESS.md  README.md  bsl_type_hierarchy.html  build.rs  build_output.txt  cargo_errors_short.txt  debug_xml_parsing.rs  test_autocomplete.bsl  test_lsp.bsl  test_lsp_completion.py  test_single_type.rs  test_web_search.rs  tmp_gpt5_cheatsheet.txt  type_hierarchy_enhanced.html  type_hierarchy_proper.html  type_hierarchy_report.html  type_hierarchy_tree.html  type_hierarchy_v3_visualization.html
.bsl_cache/: 6be7010cc972d0d1_0_4_2.cache
.claude/: settings.local.json
.github/: copilot-instructions.md  dependency-review-config.yml
.github/workflows/: ci.yml  nightly.yml  security.yml
benches/: syntax_helper_parser_bench.rs
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  INDEX.md  MIGRATION_PLAN.md  PROGRESS.md  PROGRESS_REPORT.md  PROJECT_RESTRUCTURE_PLAN.md  README.md  SYNTAX_HELPER_PARSER_SPEC.md  SYNTAX_HELPER_PARSER_V3_REVIEW.md  TEST_STRUCTURE.md  TREE_SITTER_MIGRATION.md  VISUALIZATION.md
docs/architecture/: EVOLUTIONARY_TYPE_SYSTEM_ARCHITECTURE.md  IDEAL_TYPE_SYSTEM_ARCHITECTURE.md  REVOLUTIONARY_ARCHITECTURE_ROADMAP.md  function_types_hierarchy.md  global_functions.md  overview.md
docs/archive/: SYNTAX_HELPER_PARSER_V3_IMPLEMENTATION.md  parser_recommendations.md
docs/decisions/: DESIGN_DECISIONS.md
docs/deployment/: PRODUCTION.md
docs/design/: ALTERNATIVE_TYPE_SYSTEM_APPROACHES.md
docs/development/: BUILDING.md  VSCODE_EXTENSION.md  migration.md  roadmap.md
docs/getting-started/: INSTALLATION.md  QUICKSTART.md
docs/guides/: unified_documentation.md
docs/implementation/: visualization.md
docs/patch_demo/: README.md
docs/reference/target_architecture/: README.md  central_type_system.md  migration_plan.md  overview.md  roadmap.md
examples/: analyze_database_structure.rs  check_value_table_methods.rs  demo_tree_sitter.rs  find_value_table_storage.rs  generate_1c_style_tree.rs  generate_category_tree.rs  generate_enhanced_report.rs  generate_html_report.rs  generate_proper_hierarchy.rs  generate_tree_hierarchy.rs  list_all_objects.rs  platform_types_v2_demo.rs  query_demo.rs  syntax_helper_demo.rs  syntax_helper_parser_demo.rs  syntax_helper_unified_demo.rs  syntax_helper_v3_demo.rs  test_api_endpoints.rs  test_catalog236_parser.rs  test_categories.rs  test_completion.rs  test_configuration_docs.rs  test_discovery_parser.rs  test_fuzzy_search.rs  test_guided_integration.rs  test_guided_simple.rs  test_hierarchy_debug.rs  test_html_renderer.rs  test_interactive_tree.rs  test_lang_parser.rs  test_new_documentation.rs  test_render_simple.rs  test_revolutionary_architecture.rs  test_search_engine.rs  test_simple.rs  test_tree_sitter.rs  test_tree_sitter_detailed.rs  test_tree_sitter_loops.rs  test_tree_sitter_real.rs  test_type_counts_analysis.rs  (+8 more)
examples/bsl/: test_module.bsl
examples/queries/: complex_queries.txt  simple_queries.txt
examples/syntax_helper/: README.md
src/: lib.rs
src/adapters/: category_hierarchy_parser.rs  config_parser.rs  config_parser_discovery.rs  config_parser_guided_discovery.rs  config_parser_quick_xml.rs  config_parser_xml.rs  facet_cache.rs  mod.rs  platform_docs.rs  platform_types.rs  platform_types_v2.rs  syntax_helper_parser.rs  syntax_helper_parser_v2.rs
src/application/: documentation_service.rs  mod.rs
src/architecture/: mod.rs
src/architecture/application/: mod.rs
src/architecture/data/: filters.rs  mod.rs  raw_models.rs  stats.rs  syntax_helper_loader.rs  type_repository.rs
src/architecture/domain/: mod.rs
src/architecture/presentation/: mod.rs
src/architecture/system/: mod.rs
src/core/: analysis_cache.rs  code_actions.rs  context.rs  contracts.rs  dependency_graph.rs  facets.rs  flow_sensitive.rs  fs_utils.rs  interprocedural.rs  lsp_enhanced.rs  memory_optimization.rs  mod.rs  parallel_analysis.rs  performance.rs  platform_resolver.rs  position.rs  resolution.rs  standard_types.rs  type_checker.rs  type_hints.rs  type_narrowing.rs  type_system_service.rs  types.rs  unified_type_system.rs  union_types.rs
src/data/: mod.rs
src/data/loaders/: config_parser_discovery.rs  config_parser_guided_discovery.rs  config_parser_quick_xml.rs  config_parser_xml.rs  facet_cache.rs  mod.rs  platform_types_v2.rs  syntax_helper_parser.rs
src/documentation/: mod.rs
src/documentation/configuration/: mod.rs
src/documentation/core/: cache.rs  hierarchy.rs  mod.rs  providers.rs  statistics.rs
src/documentation/platform/: mod.rs
src/documentation/render/: interactive_tree.css  mod.rs  shared_styles.css  unified_template.rs
src/documentation/search/: fuzzy.rs  mod.rs
src/domain/: mod.rs  types.rs
src/ideal/: mod.rs
src/ideal/application/: mod.rs
src/ideal/data/: mod.rs
src/ideal/domain/: mod.rs
src/ideal/presentation/: mod.rs
src/ideal/system/: mod.rs
src/parser/: ast.rs  common.rs  graph_builder.rs  lexer.rs  mod.rs  parser.rs  tree_sitter_adapter.rs  visitor.rs
src/parsing/: mod.rs
src/parsing/bsl/: ast.rs  common.rs  mod.rs  parser.rs  visitor.rs
src/presentation/: mod.rs
src/query/: ast.rs  batch.rs  mod.rs  parser.rs  type_checker.rs
src/system/: mod.rs
src/unified/: mod.rs
tests/: composite_type_simple_test.rs  composite_types_test.rs  config_parser_guided_test.rs  config_parser_test.rs  contracts_test.rs  domain_metrics_test.rs  facet_system_test.rs  flow_sensitive_test.rs  interprocedural_test.rs  parse_attributes_test.rs  parser_test.rs  repository_basic_test.rs  syntax_helper_parser_test.rs  syntax_helper_parser_v3_test.rs  tabular_section_test.rs  test_guided_integration.rs  type_narrowing_test.rs  union_types_test.rs
tests/integration/: query_parser_test.rs
tests/test_xml/: TestDocument.xml
vscode-extension/: README.md  REFACTORING_PLAN.md  package-lock.json  package.json  test_extension.bsl  test_progress.bsl  tsconfig.json
vscode-extension/src/: extension-enhanced.ts
(+34 files in other folders)
