[package]
name = "bsl-gradual-types"
version = "0.4.0"
edition = "2021"
authors = ["BSL Type System Team"]
description = "Gradual type system for 1C:Enterprise BSL with evolutionary architecture"
license = "MIT"
repository = "https://github.com/yourusername/bsl-gradual-types"
keywords = ["1c", "bsl", "type-system", "gradual-typing", "static-analysis"]
categories = ["development-tools", "parser-implementations"]

[workspace]
members = []

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.4", features = ["derive"] }

# Data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"
dashmap = "6.0"
arc-swap = "1.6"

# Parsing
quick-xml = { version = "0.31", features = ["serialize", "overlapped-lists"] }
roxmltree = "0.19"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
nom = "7.1"

# File system
walkdir = "2.5"
notify = "6.1"
globset = "0.4"

# Async runtime (for LSP/MCP)
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# LSP support
tower-lsp = "0.20"
lsp-types = "0.95"

# HTML parsing (for syntax helper)
scraper = "0.18"
zip = "0.6"

# Parallel processing
rayon = "1.8"
indicatif = "0.17"

# Caching
lru = "0.12"
bincode = "1.3"
sha2 = "0.10"

# CLI output
colored = "2.0"

# Optional ML support (for future)
# candle = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
tempfile = "3.8"
insta = "1.34"

[[bin]]
name = "bsl-analyzer"
path = "src/bin/analyzer.rs"

[[bin]]
name = "build-index"
path = "src/bin/build_index.rs"

[[bin]]
name = "lsp-server"
path = "src/bin/lsp_server.rs"

[[bin]]
name = "type-check"
path = "src/bin/type_check.rs"

# Examples
[[example]]
name = "query_demo"
path = "examples/query_demo.rs"

[[example]]
name = "syntax_helper_parser_demo"
path = "examples/syntax_helper_parser_demo.rs"

[[example]]
name = "platform_types_v2_demo"
path = "examples/platform_types_v2_demo.rs"

[[example]]
name = "type_hierarchy_visualizer"
path = "examples/type_hierarchy_visualizer.rs"

[[example]]
name = "generate_html_report"
path = "examples/generate_html_report.rs"

[[example]]
name = "generate_1c_style_tree"
path = "examples/generate_1c_style_tree.rs"

# Benchmarks
[[bench]]
name = "syntax_helper_parser_bench"
harness = false

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev-fast]
inherits = "dev"
opt-level = 1

[features]
default = ["lsp", "mcp"]
lsp = []
mcp = []
ml-predictions = []  # Future feature